--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hummingbird (0.1.11.1) precise; urgency=low
+
+  * b6a30f2 adding profiler into 0.1.11
+
+ -- David Goetz <david.goetz@rackspace.com>  Thu, 06 Aug 2015 00:00:00 +0000
+
 hummingbird (0.1.11) precise; urgency=low
 
   * a2794a4 go: make full disk log message debug-level
