--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hummingbird (0.1.28) precise; urgency=low
+
+  * bd8a923 go: fix the async logger
+
+ -- David Goetz <david.goetz@rackspace.com>  Wed, 30 Mar 2016 00:02:00 +0000
+
 hummingbird (0.1.27) precise; urgency=low
 
   * 0e1730b go: add ability to dump goroutines stacktrace with SIGABRT
