--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hummingbird (0.1.35) precise; urgency=low
+
+  * Does anyone read these?
+
+ -- Michael Barton <michael.barton@rackspace.com>  Mon, 11 Jul 2016 16:34:54 +0000
+
 hummingbird (0.1.34) precise; urgency=low
 
   * efb0435 go: make sure replicator picks up ring changes
