--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hummingbird (0.1.36) precise; urgency=low
+
+  * Does anyone read these?
+
+ -- Michael Barton <michael.barton@rackspace.com>  Sun, 17 Jul 2016 11:33:58 +0000
+
 hummingbird (0.1.35) precise; urgency=low
 
   * Does anyone read these?
